{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 245,
  "lineage": "1ba56e52-cc9f-234f-0000-61b5a6d27037",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "myecs_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:route-table/rtb-064fd4032a52c2bc0",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-003e539833d775e5e",
                "route_table_id": "rtb-064fd4032a52c2bc0",
                "subnet_id": "subnet-07f3e94cf67ece79c"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01c99da9230cbdb11",
                "route_table_id": "rtb-064fd4032a52c2bc0",
                "subnet_id": "subnet-02c3c372120deaac4"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-064fd4032a52c2bc0",
            "owner_id": "786832920677",
            "route_table_id": "rtb-064fd4032a52c2bc0",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5eec3ceca1e1d79",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "myecs_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d11da613fed0e43"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "myecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:vpc/vpc-03d11da613fed0e43",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01e298c42749f6231",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0c8d216440db1937c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d11da613fed0e43",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-092e1cef97bc90fb1",
            "owner_id": "786832920677",
            "tags": {
              "Name": "myecs"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "myecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:786832920677:loadbalancer/app/myecs-alb/abda961d58aec8ed",
            "arn_suffix": "app/myecs-alb/abda961d58aec8ed",
            "desync_mitigation_mode": "defensive",
            "dns_name": "myecs-alb-859372965.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:786832920677:loadbalancer/app/myecs-alb/abda961d58aec8ed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06fbc83220213a152"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c3c372120deaac4"
              },
              {
                "subnet_id": "subnet-07f3e94cf67ece79c"
              }
            ],
            "subnets": [
              "subnet-02c3c372120deaac4",
              "subnet-07f3e94cf67ece79c"
            ],
            "vpc_id": "vpc-03d11da613fed0e43",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.myecs_alb",
            "data.aws_subnets.myecs_public",
            "data.aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "myecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:786832920677:listener/app/myecs-alb/abda961d58aec8ed/ac72c93900ea326e",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:786832920677:certificate/5c738491-ba85-44a5-bca2-7415a8d870e7",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:786832920677:targetgroup/myecs-tg/0dbd81e526514518",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:786832920677:listener/app/myecs-alb/abda961d58aec8ed/ac72c93900ea326e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:786832920677:loadbalancer/app/myecs-alb/abda961d58aec8ed",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.myecs",
            "aws_lb_target_group.myecs",
            "aws_security_group.myecs_alb",
            "data.aws_acm_certificate.myecs",
            "data.aws_subnets.myecs_public",
            "data.aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "myecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:786832920677:targetgroup/myecs-tg/0dbd81e526514518",
            "arn_suffix": "targetgroup/myecs-tg/0dbd81e526514518",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "12",
                "path": "/AWS.ALB/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:786832920677:targetgroup/myecs-tg/0dbd81e526514518",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myecs-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "GRPC",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03d11da613fed0e43"
          },
          "dependencies": [
            "data.aws_vpc.myecs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:security-group/sg-06fbc83220213a152",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fbc83220213a152",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myecs-alb-sg",
            "name_prefix": "",
            "owner_id": "786832920677",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d11da613fed0e43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:security-group/sg-07ad47fa8a3c4dee4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ad47fa8a3c4dee4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fbc83220213a152"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "myecs-service-sg",
            "name_prefix": "",
            "owner_id": "786832920677",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d11da613fed0e43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.myecs_alb",
            "data.aws_vpc.myecs"
          ]
        }
      ]
    }
  ]
}